- Bugfix: Dropping a CGrid with 3 or more stacked elements produced an exception
- API: DockFrontend stores also the layout of invisible elements (using DockFactories)
- Bugfix: DockFrontend.read from DataInputStream did mark the main Setting as "entry=true" while it should have been "entry=false"
- API: 'DockFrontend.listFrontendEntries()' and 'getFontendEntry( String key )' allow access to any information a frontend knows about a (missing or not missing) Dockable
- API: Order of operations in PreferenceTable reversed.
- API: Eduardo Born suggested an upgrade of CGrid: if some dockables are placed at the exact same location they are stacked
- API: new CControlRegister for better access to all the elements that are used by a CControl
- Bugfix: DockFocusTraversalPolicy could create infinite recursion if used together with javax.swing.LegacyGlueFocusTraversalPolicy
- API: New methods to change the fonts of titles and tabs. The interface DockFont provides some keys which can be used together with FontManager to change fonts.
- API: Common supports new font system as well, the new FontMap can be used just like the ColorMap.
- Bugfix: CWoringArea.deploy did not correctly change the working-area of the newly added children
- Layout: more than just one DockStation can be marked as beeing the parent of maximized Dockables in Common, the interface MaximizeArea has been introduced for that
- Bugfix: When using the same coordinates in SplitDockGrid twice or more times, an exception occured
- API: VetoableDockFrontendListener.hiding is now also called when appliying a new layout. The method showing is not called because the elements to show do not yet exist.
- Bugfix: FlapWindow did not always get the correct size when its parent got resized while the window was invisible. Fixed by Peter.
- API: CGrid/SplitDockGrid: new method select/setSelected to preselect a CDockable/Dockable in a stack of Dockables. 